src/snapshots/alma__parser__tests__test_module_parser__constructor_parameters-2.snap
---
source: src/parser.rs
assertion_line: 2706
expression: "parse(\"\nmodule Test\n\ntype Fruit a = Banana a (Phone a)\n\")"

---
Input:


module Test

type Fruit a = Banana a (Phone a)


Result:

(
    Module {
        name: ModuleName {
            parts: [
                Node {
                    start: 8,
                    end: 12,
                    line: 2,
                    column: 7,
                    value: CapitalizedIdentifier_ {
                        name: SymbolU32 {
                            value: 1,
                        },
                    },
                },
            ],
            full_name: SymbolU32 {
                value: 1,
            },
        },
        exports: [],
        imports: [],
        definitions: [],
        type_definitions: [
            Node {
                start: 14,
                end: 47,
                line: 4,
                column: 0,
                value: TypeDefinition_ {
                    name: Node {
                        start: 19,
                        end: 24,
                        line: 4,
                        column: 5,
                        value: CapitalizedIdentifier_ {
                            name: SymbolU32 {
                                value: 2,
                            },
                        },
                    },
                    vars: [
                        Node {
                            start: 25,
                            end: 26,
                            line: 4,
                            column: 11,
                            value: Identifier_ {
                                name: SymbolU32 {
                                    value: 3,
                                },
                            },
                        },
                    ],
                    typ: Union(
                        [
                            Node {
                                start: 29,
                                end: 47,
                                line: 4,
                                column: 15,
                                value: Constructor_ {
                                    name: Node {
                                        start: 29,
                                        end: 35,
                                        line: 4,
                                        column: 15,
                                        value: CapitalizedIdentifier_ {
                                            name: SymbolU32 {
                                                value: 4,
                                            },
                                        },
                                    },
                                    params: [
                                        Var(
                                            Node {
                                                start: 36,
                                                end: 37,
                                                line: 4,
                                                column: 22,
                                                value: Identifier_ {
                                                    name: SymbolU32 {
                                                        value: 3,
                                                    },
                                                },
                                            },
                                        ),
                                        App(
                                            Node {
                                                start: 39,
                                                end: 46,
                                                line: 4,
                                                column: 25,
                                                value: Constructor_ {
                                                    name: Node {
                                                        start: 39,
                                                        end: 44,
                                                        line: 4,
                                                        column: 25,
                                                        value: CapitalizedIdentifier_ {
                                                            name: SymbolU32 {
                                                                value: 5,
                                                            },
                                                        },
                                                    },
                                                    params: [
                                                        Var(
                                                            Node {
                                                                start: 45,
                                                                end: 46,
                                                                line: 4,
                                                                column: 31,
                                                                value: Identifier_ {
                                                                    name: SymbolU32 {
                                                                        value: 3,
                                                                    },
                                                                },
                                                            },
                                                        ),
                                                    ],
                                                },
                                            },
                                        ),
                                    ],
                                },
                            },
                        ],
                    ),
                },
            },
        ],
    },
    [],
)
