src/snapshots/alma__parser__tests__test_module_parser__constructor_parameters.snap
---
source: src/parser.rs
assertion_line: 2859
expression: "parse(\"\nmodule Test\n\ntype Fruit a = Banana a Phone a\n\")"
---
Input:


module Test

type Fruit a = Banana a Phone a


Result:

(
    Module {
        name: ModuleName {
            parts: [
                Node {
                    start: Index(
                        1,
                    ),
                    end: Index(
                        1,
                    ),
                    value: CapitalizedIdentifier_ {
                        name: SymbolU32 {
                            value: 1,
                        },
                    },
                },
            ],
            full_name: SymbolU32 {
                value: 1,
            },
        },
        exports: [],
        imports: [],
        definitions: [],
        type_definitions: [
            Node {
                start: Index(
                    2,
                ),
                end: Index(
                    9,
                ),
                value: TypeDefinition_ {
                    name: Node {
                        start: Index(
                            3,
                        ),
                        end: Index(
                            3,
                        ),
                        value: CapitalizedIdentifier_ {
                            name: SymbolU32 {
                                value: 2,
                            },
                        },
                    },
                    vars: [
                        Node {
                            start: Index(
                                4,
                            ),
                            end: Index(
                                4,
                            ),
                            value: Identifier_ {
                                name: SymbolU32 {
                                    value: 3,
                                },
                            },
                        },
                    ],
                    typ: Union(
                        [
                            Node {
                                start: Index(
                                    6,
                                ),
                                end: Index(
                                    9,
                                ),
                                value: Constructor_ {
                                    name: Node {
                                        start: Index(
                                            6,
                                        ),
                                        end: Index(
                                            6,
                                        ),
                                        value: CapitalizedIdentifier_ {
                                            name: SymbolU32 {
                                                value: 4,
                                            },
                                        },
                                    },
                                    params: [
                                        Var(
                                            Node {
                                                start: Index(
                                                    7,
                                                ),
                                                end: Index(
                                                    7,
                                                ),
                                                value: Identifier_ {
                                                    name: SymbolU32 {
                                                        value: 3,
                                                    },
                                                },
                                            },
                                        ),
                                        App(
                                            Node {
                                                start: Index(
                                                    8,
                                                ),
                                                end: Index(
                                                    8,
                                                ),
                                                value: Constructor_ {
                                                    name: Node {
                                                        start: Index(
                                                            8,
                                                        ),
                                                        end: Index(
                                                            8,
                                                        ),
                                                        value: CapitalizedIdentifier_ {
                                                            name: SymbolU32 {
                                                                value: 5,
                                                            },
                                                        },
                                                    },
                                                    params: [],
                                                },
                                            },
                                        ),
                                        Var(
                                            Node {
                                                start: Index(
                                                    9,
                                                ),
                                                end: Index(
                                                    9,
                                                ),
                                                value: Identifier_ {
                                                    name: SymbolU32 {
                                                        value: 3,
                                                    },
                                                },
                                            },
                                        ),
                                    ],
                                },
                            },
                        ],
                    ),
                },
            },
        ],
    },
    [],
)
