src/snapshots/alma__parser__tests__test_module_parser__exposing-2.snap
---
source: src/parser.rs
assertion_line: 3138
expression: "parse(\"\\\nmodule Test exposing (a, b)\n\na = 1\n\nb = True\")"
---
Input:

module Test exposing (a, b)

a = 1

b = True

Result:

module Test
    exports:
        a 22:23 22:23
        b 25:26 25:26
    imports:
        Alma 0:6
            Float 0:6 0:6
            String 0:6 0:6
            Bool 0:6 (True 0:6, False 0:6) 0:6
    type_definitions:

    definitions:
        Untyped
            pattern:
                Identifier a 29:30 29:30
            expr:
                Float 1 33:34
        Untyped
            pattern:
                Identifier b 36:37 36:37
            expr:
                Identifier True 40:44 40:44



