src/snapshots/alma__parser__tests__test_module_parser__exposing.snap
---
source: src/parser.rs
assertion_line: 2619
expression: "parse(\"\\\nmodule Test exposing (a)\n\na = 1\n\nb = True\")"
---
Input:

module Test exposing (a)

a = 1

b = True

Result:

(
    Module {
        name: ModuleName {
            parts: [
                CapitalizedIdentifier {
                    name: SymbolU32 {
                        value: 1,
                    },
                    span: Index(
                        0,
                    ),
                },
            ],
            full_name: SymbolU32 {
                value: 1,
            },
        },
        exports: [
            Export {
                span: Index(
                    1,
                ),
                typ: Identifier(
                    Identifier {
                        name: SymbolU32 {
                            value: 2,
                        },
                        span: Index(
                            1,
                        ),
                    },
                ),
            },
        ],
        imports: [],
        definitions: [
            Untyped(
                Pattern(
                    Pattern {
                        span: Index(
                            2,
                        ),
                        typ: Identifier(
                            Identifier {
                                name: SymbolU32 {
                                    value: 2,
                                },
                                span: Index(
                                    2,
                                ),
                            },
                        ),
                    },
                    Index(
                        0,
                    ),
                ),
            ),
            Untyped(
                Pattern(
                    Pattern {
                        span: Index(
                            5,
                        ),
                        typ: Identifier(
                            Identifier {
                                name: SymbolU32 {
                                    value: 4,
                                },
                                span: Index(
                                    5,
                                ),
                            },
                        ),
                    },
                    Index(
                        1,
                    ),
                ),
            ),
        ],
        type_definitions: [],
    },
    [],
)

{
    Index(
        0,
    ): Expression {
        span: Index(
            4,
        ),
        typ: RefCell {
            value: None,
        },
        expr: Float(
            1.0,
        ),
    },
    Index(
        1,
    ): Expression {
        span: Index(
            7,
        ),
        typ: RefCell {
            value: None,
        },
        expr: Bool(
            true,
        ),
    },
}

{
    Index(
        0,
    ): Span {
        start: Index(
            1,
        ),
        end: Index(
            1,
        ),
    },
    Index(
        1,
    ): Span {
        start: Index(
            4,
        ),
        end: Index(
            4,
        ),
    },
    Index(
        2,
    ): Span {
        start: Index(
            6,
        ),
        end: Index(
            6,
        ),
    },
    Index(
        3,
    ): Span {
        start: Index(
            6,
        ),
        end: Index(
            6,
        ),
    },
    Index(
        4,
    ): Span {
        start: Index(
            8,
        ),
        end: Index(
            8,
        ),
    },
    Index(
        5,
    ): Span {
        start: Index(
            9,
        ),
        end: Index(
            9,
        ),
    },
    Index(
        6,
    ): Span {
        start: Index(
            9,
        ),
        end: Index(
            9,
        ),
    },
    Index(
        7,
    ): Span {
        start: Index(
            11,
        ),
        end: Index(
            11,
        ),
    },
}
