src/snapshots/alma__parser__tests__test_module_parser__exposing_types-2.snap
---
source: src/parser.rs
assertion_line: 2988
expression: "parse(\"\\\nmodule Test exposing (main)\n\nimport Test.Fruits exposing (Fruit(Banana))\n\nmain = 1\n\nmodule Test.Fruits exposing (Fruit(Banana))\n    type Fruit = Banana\n\")"
---
Input:

module Test exposing (main)

import Test.Fruits exposing (Fruit(Banana))

main = 1

module Test.Fruits exposing (Fruit(Banana))
    type Fruit = Banana


Result:

(
    Module {
        name: ModuleName {
            parts: [
                CapitalizedIdentifier {
                    name: SymbolU32 {
                        value: 1,
                    },
                    span: Index(
                        0,
                    ),
                },
            ],
            full_name: SymbolU32 {
                value: 1,
            },
        },
        exports: [
            Export {
                span: Index(
                    1,
                ),
                typ: Identifier(
                    Identifier {
                        name: SymbolU32 {
                            value: 2,
                        },
                        span: Index(
                            1,
                        ),
                    },
                ),
            },
        ],
        imports: [
            Import {
                span: Index(
                    7,
                ),
                module_name: ModuleName {
                    parts: [
                        CapitalizedIdentifier {
                            name: SymbolU32 {
                                value: 1,
                            },
                            span: Index(
                                2,
                            ),
                        },
                        CapitalizedIdentifier {
                            name: SymbolU32 {
                                value: 3,
                            },
                            span: Index(
                                3,
                            ),
                        },
                    ],
                    full_name: SymbolU32 {
                        value: 7,
                    },
                },
                alias: None,
                exposing: [
                    Export {
                        span: Index(
                            6,
                        ),
                        typ: Type {
                            name: CapitalizedIdentifier {
                                name: SymbolU32 {
                                    value: 4,
                                },
                                span: Index(
                                    4,
                                ),
                            },
                            constructors: [
                                CapitalizedIdentifier {
                                    name: SymbolU32 {
                                        value: 5,
                                    },
                                    span: Index(
                                        5,
                                    ),
                                },
                            ],
                        },
                    },
                ],
            },
        ],
        definitions: [
            Untyped(
                Pattern(
                    Pattern {
                        span: Index(
                            8,
                        ),
                        typ: Identifier(
                            Identifier {
                                name: SymbolU32 {
                                    value: 2,
                                },
                                span: Index(
                                    8,
                                ),
                            },
                        ),
                    },
                    Index(
                        0,
                    ),
                ),
            ),
        ],
        type_definitions: [],
    },
    [
        Module {
            name: ModuleName {
                parts: [
                    CapitalizedIdentifier {
                        name: SymbolU32 {
                            value: 1,
                        },
                        span: Index(
                            11,
                        ),
                    },
                    CapitalizedIdentifier {
                        name: SymbolU32 {
                            value: 3,
                        },
                        span: Index(
                            12,
                        ),
                    },
                ],
                full_name: SymbolU32 {
                    value: 7,
                },
            },
            exports: [
                Export {
                    span: Index(
                        15,
                    ),
                    typ: Type {
                        name: CapitalizedIdentifier {
                            name: SymbolU32 {
                                value: 4,
                            },
                            span: Index(
                                13,
                            ),
                        },
                        constructors: [
                            CapitalizedIdentifier {
                                name: SymbolU32 {
                                    value: 5,
                                },
                                span: Index(
                                    14,
                                ),
                            },
                        ],
                    },
                },
            ],
            imports: [],
            definitions: [],
            type_definitions: [
                TypeDefinition {
                    span: Index(
                        19,
                    ),
                    name: CapitalizedIdentifier {
                        name: SymbolU32 {
                            value: 4,
                        },
                        span: Index(
                            16,
                        ),
                    },
                    vars: [],
                    typ: Union {
                        constructors: [
                            Constructor {
                                span: Index(
                                    18,
                                ),
                                name: CapitalizedIdentifier {
                                    name: SymbolU32 {
                                        value: 5,
                                    },
                                    span: Index(
                                        17,
                                    ),
                                },
                                params: [],
                            },
                        ],
                    },
                },
            ],
        },
    ],
)

{
    Index(
        0,
    ): Expression {
        span: Index(
            10,
        ),
        typ: RefCell {
            value: None,
        },
        expr: Float(
            1.0,
        ),
    },
}

{
    Index(
        0,
    ): Span {
        start: Index(
            1,
        ),
        end: Index(
            1,
        ),
    },
    Index(
        1,
    ): Span {
        start: Index(
            4,
        ),
        end: Index(
            4,
        ),
    },
    Index(
        2,
    ): Span {
        start: Index(
            7,
        ),
        end: Index(
            7,
        ),
    },
    Index(
        3,
    ): Span {
        start: Index(
            9,
        ),
        end: Index(
            9,
        ),
    },
    Index(
        4,
    ): Span {
        start: Index(
            12,
        ),
        end: Index(
            12,
        ),
    },
    Index(
        5,
    ): Span {
        start: Index(
            14,
        ),
        end: Index(
            14,
        ),
    },
    Index(
        6,
    ): Span {
        start: Index(
            12,
        ),
        end: Index(
            15,
        ),
    },
    Index(
        7,
    ): Span {
        start: Index(
            6,
        ),
        end: Index(
            16,
        ),
    },
    Index(
        8,
    ): Span {
        start: Index(
            17,
        ),
        end: Index(
            17,
        ),
    },
    Index(
        9,
    ): Span {
        start: Index(
            17,
        ),
        end: Index(
            17,
        ),
    },
    Index(
        10,
    ): Span {
        start: Index(
            19,
        ),
        end: Index(
            19,
        ),
    },
    Index(
        11,
    ): Span {
        start: Index(
            21,
        ),
        end: Index(
            21,
        ),
    },
    Index(
        12,
    ): Span {
        start: Index(
            23,
        ),
        end: Index(
            23,
        ),
    },
    Index(
        13,
    ): Span {
        start: Index(
            26,
        ),
        end: Index(
            26,
        ),
    },
    Index(
        14,
    ): Span {
        start: Index(
            28,
        ),
        end: Index(
            28,
        ),
    },
    Index(
        15,
    ): Span {
        start: Index(
            26,
        ),
        end: Index(
            29,
        ),
    },
    Index(
        16,
    ): Span {
        start: Index(
            32,
        ),
        end: Index(
            32,
        ),
    },
    Index(
        17,
    ): Span {
        start: Index(
            34,
        ),
        end: Index(
            34,
        ),
    },
    Index(
        18,
    ): Span {
        start: Index(
            34,
        ),
        end: Index(
            34,
        ),
    },
    Index(
        19,
    ): Span {
        start: Index(
            31,
        ),
        end: Index(
            34,
        ),
    },
}
