src/snapshots/alma__parser__tests__test_module_parser__exposing_types.snap
---
source: src/parser.rs
assertion_line: 3514
expression: "parse(\"\\\nmodule Test exposing (Fruit(Banana))\n\ntype Fruit = Banana\n\")"
---
Input:

module Test exposing (Fruit(Banana))

type Fruit = Banana


Result:

module Test
    exports:
        Fruit 22:27 (Banana 28:34) 22:35
    imports:
        Alma 0:6
            Float 0:6 0:6
            String 0:6 0:6
            Bool 0:6 (True 0:6, False 0:6) 0:6
    type_definitions:
        Fruit 43:48
            Banana 51:57 51:57
    definitions:




